# serialize

./: .clang-format  .clang-tidy  CMakeLists.txt  Readme.md
.github/workflows/: build.yml
cmake/: cpptest_lite.cmake
examples/: CMakeLists.txt  aggregate.cpp  basic.cpp  custom.cpp  member.cpp  static.cpp  type_safe.cpp
include/: bit_packing.hpp  byte_packing.hpp  common.hpp  deserialize.hpp  serialize.hpp  simple.hpp  traits.hpp  type_safe.hpp
src/: CMakeLists.txt  bit_helpers.hpp  bit_packing.cpp  byte_packing.cpp  common.cpp  simple.cpp  type_safe.cpp
test/: CMakeLists.txt  test_base.hpp  test_bit_packing.cpp  test_byte_packing.cpp  test_main.cpp  test_processes.cmake  test_processes.cpp  test_simple.cpp  test_type_safe.cpp
